# sokuji-bridge

./: .env.example  .gitignore  ARCHITECTURE_MIGRATION.md  BRANCH_README.md  CHANGELOG.md  COSYVOICE_IMPLEMENTATION.md  DOCUMENTATION_CLEANUP.md  INSTALL.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_MICROSERVICES.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_microphone.py  test_simulstreaming.py  test_simulstreaming_gpu.py
configs/: cosyvoice_translation.yaml  default.yaml  simulstreaming_example.yaml  simulstreaming_lowmem.yaml  simulstreaming_vad.yaml
configs/examples/: .env.example
docs/: DEBUG_USAGE.md  README.md  VAD_CONFIGURATION.md  VAD_FIX.md  api.md  architecture-microservices.md  audio_io.md  cosyvoice_installation.md  cosyvoice_provider.md  installation.md  performance.md  providers.md  quickstart.md
docs/features/: simulstreaming-setup.md  simulstreaming-vad.md
docs/guides/: debug-mode.md  microphone-realtime.md  model-selection.md
docs/providers/: faster-whisper-vad.md
examples/: basic_usage.py  compare_stt_providers.py  cosyvoice_example.py  file_translation.py  microphone_debug.py  microphone_simulstreaming.py  microphone_to_speaker.py  simple_test.py  test_stt_only.py  web-client.html
proto/: common.proto  stt.proto  translation.proto  tts.proto
scripts/: build_services.sh  generate_protos.sh
services/gateway/: Dockerfile  grpc_clients.py  requirements.txt  server.py
services/stt_service/: Dockerfile  requirements.txt  server.py
services/stt_service/requirements/: README.md  azure_stt.txt  base.txt  faster_whisper.txt  whisper_api.txt
services/translation_service/: Dockerfile  requirements.txt  server.py
services/translation_service/requirements/: README.md  base.txt  deepl_api.txt  google_translate.txt  nllb_local.txt  openai_gpt4.txt
services/tts_service/: Dockerfile  requirements.txt  server.py
services/tts_service/requirements/: README.md  base.txt  elevenlabs.txt  kokoro.txt  piper.txt  xtts.txt
src/config/: manager.py  schemas.py
src/core/: pipeline.py
src/monolith/: README.md
src/providers/: base.py
src/providers/stt/: __init__.py  faster_whisper_provider.py  simulstreaming_provider.py
src/providers/stt/simulstreaming/: __init__.py  simul_whisper.py
src/providers/stt/simulstreaming/whisper/: timing.py
src/providers/stt/simulstreaming/whisper_streaming/: __init__.py  vac_online_processor.py
src/providers/translation/: nllb_provider.py
src/providers/tts/: __init__.py  cosyvoice_provider.py  piper_provider.py
src/utils/: __init__.py  audio_file.py  audio_io.py  microphone.py  speaker.py  vad.py
tests/: test_audio_io.py
tests/providers/tts/: test_cosyvoice_provider.py
